<resources>
    <string name="app_name">Lifty</string>
    <string name="title_activity_create_program">CreateProgramActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="n_days">X %d</string>
    <string name="n_weeks">%d Weeks</string>
    <string name="sets_d">Sets: </string>
    <string name="reps">Reps: </string>
    <string name="rpe_d">RPE: </string>
    <string name="rpe_actual">Actual RPE: </string>
    <string name="actual_rpe">Actual RPE:</string>
    <string name="actual_weight">Actual Weight:</string>
    <string name="weight">Weight:</string>
    <string name="notes">Notes:</string>
    <string name="program_name">Program Name</string>

</resources>