<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="6dp"
    app:cardCornerRadius="15dp"
    android:backgroundTint="@color/orange_dark"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lift_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:text="Title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/sets_planned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="Sets: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lift_title" />
        <TextView
            android:id="@+id/reps_planned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="Reps: "
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sets_planned" />

        <TextView
            android:id="@+id/weight_planned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reps_planned" />

        <TextView
            android:id="@+id/weight_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/actual_weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/editTextWeightActual"
            app:layout_constraintTop_toBottomOf="@+id/reps_planned" />

        <EditText
            android:id="@+id/editTextWeightActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:width="55dp"
            android:ems="@integer/material_motion_duration_short_1"
            android:inputType="number|numberDecimal"
            android:maxLength="5"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorLink="@color/black"
            android:textCursorDrawable="?android:attr/textCursorDrawable"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/weight_actual"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="555.5" />
        <TextView
            android:id="@+id/RPE_planned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/rpe_d"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_planned" />

        <TextView
            android:id="@+id/RPE_actual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/actual_rpe"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/weight_actual"
            app:layout_constraintTop_toBottomOf="@+id/weight_actual" />

        <EditText
            android:id="@+id/editTextRPEActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="35dp"
            android:ems="@integer/material_motion_duration_short_1"
            android:inputType="number"
            android:maxLength="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/RPE_actual"
            app:layout_constraintStart_toStartOf="@id/editTextWeightActual" />
        <TextView
            android:id="@+id/notes_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/notes"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/RPE_planned"
            app:layout_constraintTop_toBottomOf="@+id/RPE_planned" />
        <TextView
            android:id="@+id/notes_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginStart="10dp"
            android:text="note note note"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/RPE_planned"
            app:layout_constraintTop_toBottomOf="@+id/notes_title" />

        <Button
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Close"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/RPE_planned"
            app:layout_constraintTop_toBottomOf="@+id/notes_body"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>
        <Button
            android:id="@+id/complete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Mark Complete"
            android:layout_marginEnd="28dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notes_body"
            style="@style/Widget.MaterialComponents.Button.TextButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>